# word_counter

./: .gitignore  README.md  pyproject.toml
.github/workflows/: Pytest.yml
tests/: conftest.py  test_logic.py
word_counter/: __main__.py  app.py  cli.py  logic.py  nltk_setup.py
