[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "word_counter"
version = "0.1.0"
description = "A GUI word frequency counter"
authors = [{ name = "Joseph Rich", email = "josephrich98@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "nltk"
]

[project.scripts]
word_counter = "word_counter.__main__:main"

